--- a/1 Supervised Machine Learning Regression and Classification/Week 1/Lab Files/C1_W1_Lab03_Model_Representation_Soln.ipynb
+++ b/1 Supervised Machine Learning Regression and Classification/Week 1/Lab Files/C1_W1_Lab03_Model_Representation_Soln.ipynb
@@ -389,9 +389,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
