--- a/1 Supervised Machine Learning Regression and Classification/Week 1/Lab Files/C1_W1_Lab03_Model_Representation_Soln.ipynb
+++ b/1 Supervised Machine Learning Regression and Classification/Week 1/Lab Files/C1_W1_Lab03_Model_Representation_Soln.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Optional Lab: Model Representation\n",
     "\n",
     "<figure>\n",
-    " <img src=\"./images/C1_W1_L3_S1_Lecture_b.png\"   style=\"width:600px;height:200px;\">\n",
+    " <img src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 1/images/C1_W1_L3_S1_Lecture_b.png\"   style=\"width:1500px;height:500px;\">\n",
     "</figure>"
    ]
   },
@@ -53,21 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('./deeplearning.mplstyle')"
+    "plt.style.use('/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 1/Lab Files/deeplearning.mplstyle')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Problem Statement\n",
-    "<img align=\"left\" src=\"./images/C1_W1_L3_S1_trainingdata.png\"    style=\" width:380px; padding: 10px;  \" /> \n",
+    "<img align=\"left\" src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 1/images/C1_W1_L3_S1_trainingdata.png\"    style=\" width:380px; padding: 10px;  \" /> \n",
     "\n",
     "As in the lecture, you will use the motivating example of housing price prediction.  \n",
     "This lab will use a simple data set with only two data points - a house with 1000 square feet(sqft) sold for \\\\$300,000 and a house with 2000 square feet sold for \\\\$500,000. These two points will constitute our *data or training set*. In this lab, the units of size are 1000 sqft and the units of price are 1000s of dollars.\n",
@@ -89,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train = [1. 2.]\n",
+      "y_train = [300. 500.]\n"
+     ]
+    }
+   ],
    "source": [
     "# x_train is the input variable (size in 1000 square feet)\n",
     "# y_train is the target (price in 1000s of dollars)\n",
@@ -118,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train.shape: (2,)\n",
+      "Number of training examples is: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# m is the number of training examples\n",
     "print(f\"x_train.shape: {x_train.shape}\")\n",
@@ -137,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples is: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# m is the number of training examples\n",
     "m = len(x_train)\n",
@@ -160,15 +188,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x^(0), y^(0)) = (1.0, 300.0)\n",
+      "(x^(1), y^(1)) = (2.0, 500.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "i = 0 # Change this to 1 to see (x^1, y^1)\n",
-    "\n",
-    "x_i = x_train[i]\n",
-    "y_i = y_train[i]\n",
-    "print(f\"(x^({i}), y^({i})) = ({x_i}, {y_i})\")"
+    "# i = 0 # Change this to 1 to see (x^1, y^1)\n",
+    "for i in range(m):\n",
+    "    x_i = x_train[i]\n",
+    "    y_i = y_train[i]\n",
+    "    print(f\"(x^({i}), y^({i})) = ({x_i}, {y_i})\")"
    ]
   },
   {
