Ran all the cells of the notebook

--- a/1 Supervised Machine Learning Regression and Classification/Week 1/Lab Files/C1_W1_Lab05_Gradient_Descent_Soln.ipynb
+++ b/1 Supervised Machine Learning Regression and Classification/Week 1/Lab Files/C1_W1_Lab05_Gradient_Descent_Soln.ipynb
@@ -344,10 +344,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src=\"./images/C1_W1_Lab03_lecture_learningrate.PNG\"  style=\"width:340px; padding: 15px; \" > \n",
+    "<img align=\"left\" src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 1/images/C1_W1_Lab03_lecture_learningrate.PNG\"  style=\"width:340px; padding: 15px; \" > \n",
     "Take a moment and note some characteristics of the gradient descent process printed above.  \n",
     "\n",
     "- The cost starts large and rapidly declines as described in the slide from the lecture.\n",
