Ran all the code blocks

--- a/1 Supervised Machine Learning Regression and Classification/Week 2/Lab/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
+++ b/1 Supervised Machine Learning Regression and Classification/Week 2/Lab/C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +71,7 @@
     "# 3 Vectors\n",
     "<a name=\"toc_40015_3.1\"></a>\n",
     "## 3.1 Abstract\n",
-    "<img align=\"right\" src=\"./images/C1_W2_Lab04_Vectors.PNG\" style=\"width:340px;\" >Vectors, as you will use them in this course, are ordered arrays of numbers. In notation, vectors are denoted with lower case bold letters such as $\\mathbf{x}$.  The elements of a vector are all the same type. A vector does not, for example, contain both characters and numbers. The number of elements in the array is often referred to as the *dimension* though mathematicians may prefer *rank*. The vector shown has a dimension of $n$. The elements of a vector can be referenced with an index. In math settings, indexes typically run from 1 to n. In computer science and these labs, indexing will typically run from 0 to n-1.  In notation, elements of a vector, when referenced individually will indicate the index in a subscript, for example, the $0^{th}$ element, of the vector $\\mathbf{x}$ is $x_0$. Note, the x is not bold in this case.  \n"
+    "<img align=\"right\" src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 2/images/C1_W2_Lab04_Vectors.PNG\" style=\"width:340px;\" >Vectors, as you will use them in this course, are ordered arrays of numbers. In notation, vectors are denoted with lower case bold letters such as $\\mathbf{x}$.  The elements of a vector are all the same type. A vector does not, for example, contain both characters and numbers. The number of elements in the array is often referred to as the *dimension* though mathematicians may prefer *rank*. The vector shown has a dimension of $n$. The elements of a vector can be referenced with an index. In math settings, indexes typically run from 1 to n. In computer science and these labs, indexing will typically run from 0 to n-1.  In notation, elements of a vector, when referenced individually will indicate the index in a subscript, for example, the $0^{th}$ element, of the vector $\\mathbf{x}$ is $x_0$. Note, the x is not bold in this case.  \n"
    ]
   },
   {
@@ -103,9 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.zeros(4) :   a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
+      "np.zeros(4,) :  a = [0. 0. 0. 0.], a shape = (4,), a data type = float64\n",
+      "np.random.random_sample(4): a = [0.63780809 0.57474231 0.57261886 0.5158932 ], a shape = (4,), a data type = float64\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy routines which allocate memory and fill arrays with value\n",
     "a = np.zeros(4);                print(f\"np.zeros(4) :   a = {a}, a shape = {a.shape}, a data type = {a.dtype}\")\n",
@@ -122,9 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.arange(4.):     a = [0. 1. 2. 3.], a shape = (4,), a data type = float64\n",
+      "np.random.rand(4): a = [0.8546278  0.2317989  0.24362534 0.38328104], a shape = (4,), a data type = float64\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy routines which allocate memory and fill arrays with value but do not accept shape as input argument\n",
     "a = np.arange(4.);              print(f\"np.arange(4.):     a = {a}, a shape = {a.shape}, a data type = {a.dtype}\")\n",
@@ -140,9 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.array([5,4,3,2]):  a = [5 4 3 2],     a shape = (4,), a data type = int64\n",
+      "np.array([5.,4,3,2]): a = [5. 4. 3. 2.], a shape = (4,), a data type = float64\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy routines which allocate memory and fill with user specified values\n",
     "a = np.array([5,4,3,2]);  print(f\"np.array([5,4,3,2]):  a = {a},     a shape = {a.shape}, a data type = {a.dtype}\")\n",
@@ -173,26 +202,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#vector indexing operations on 1-D vectors\n",
     "a = np.arange(10)\n",
-    "print(a)\n",
-    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a[2].shape: () a[2]  = 2, Accessing an element returns a scalar\n"
+     ]
+    }
+   ],
+   "source": [
     "#access an element\n",
-    "print(f\"a[2].shape: {a[2].shape} a[2]  = {a[2]}, Accessing an element returns a scalar\")\n",
-    "\n",
+    "print(f\"a[2].shape: {a[2].shape} a[2]  = {a[2]}, Accessing an element returns a scalar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a[-1] = 9\n",
+      "The error message you'll see is: 'index 10 is out of bounds for axis 0 with size 10'\n"
+     ]
+    }
+   ],
+   "source": [
     "# access the last element, negative indexes count from the end\n",
     "print(f\"a[-1] = {a[-1]}\")\n",
     "\n",
-    "#indexs must be within the range of the vector or they will produce and error\n",
+    "#indices must be within the range of the vector or they will produce and error\n",
     "try:\n",
     "    c = a[10]\n",
     "except Exception as e:\n",
-    "    print(\"The error message you'll see is:\")\n",
-    "    print(e)"
+    "    print(f\"The error message you'll see is: '{e}'\")"
    ]
   },
   {
@@ -206,9 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a         = [0 1 2 3 4 5 6 7 8 9]\n",
+      "a[2:7:1] =  [2 3 4 5 6]\n",
+      "a[2:7:2] =  [2 4 6]\n",
+      "a[3:]    =  [3 4 5 6 7 8 9]\n",
+      "a[:3]    =  [0 1 2]\n",
+      "a[:]     =  [0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#vector slicing operations\n",
     "a = np.arange(10)\n",
@@ -241,9 +321,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a             : [1 2 3 4]\n",
+      "b = -a        : [-1 -2 -3 -4]\n",
+      "b = np.sum(a) : 10\n",
+      "b = np.mean(a): 2.5\n",
+      "b = a**2      : [ 1  4  9 16]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1,2,3,4])\n",
     "print(f\"a             : {a}\")\n",
@@ -255,9 +347,11 @@
     "b = np.sum(a) \n",
     "print(f\"b = np.sum(a) : {b}\")\n",
     "\n",
+    "# mean of all elements of a, returns a scalar\n",
     "b = np.mean(a)\n",
     "print(f\"b = np.mean(a): {b}\")\n",
     "\n",
+    "# Square elements of a\n",
     "b = a**2\n",
     "print(f\"b = a**2      : {b}\")"
    ]
@@ -274,9 +368,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary operators work element wise: [0 0 6 8]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([ 1, 2, 3, 4])\n",
     "b = np.array([-1,-2, 3, 4])\n",
@@ -292,9 +394,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The error message you'll see is:\n",
+      "operands could not be broadcast together with shapes (4,) (2,) \n"
+     ]
+    }
+   ],
    "source": [
     "#try a mismatched vector operation\n",
     "c = np.array([1, 2])\n",
@@ -316,9 +427,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b = 5 * a : [ 5 10 15 20]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1, 2, 3, 4])\n",
     "\n",
@@ -337,10 +456,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/C1_W2_Lab04_dot_notrans.gif\" width=800> "
+    "<img src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 2/images/C1_W2_Lab04_dot_notrans.gif\" width=800> "
    ]
   },
   {
@@ -364,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,9 +507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_dot(a, b) = 24\n"
+     ]
+    }
+   ],
    "source": [
     "# test 1-D\n",
     "a = np.array([1, 2, 3, 4])\n",
@@ -408,9 +536,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy 1-D np.dot(a, b) = 24, np.dot(a, b).shape = () \n",
+      "NumPy 1-D np.dot(b, a) = 24, np.dot(a, b).shape = () \n"
+     ]
+    }
+   ],
    "source": [
     "# test 1-D\n",
     "a = np.array([1, 2, 3, 4])\n",
@@ -439,9 +576,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.dot(a, b) =  2501072.5817\n",
+      "Vectorized version duration: 6.1896 ms \n",
+      "my_dot(a, b) =  2501072.5817\n",
+      "loop version duration: 2569.6578 ms \n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(1)\n",
     "a = np.random.rand(10000000)  # very large arrays\n",
@@ -488,9 +636,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X[1] has shape (1,)\n",
+      "w has shape (1,)\n",
+      "c has shape ()\n"
+     ]
+    }
+   ],
    "source": [
     "# show common Course 1 example\n",
     "X = np.array([[1],[2],[3],[4]])\n",
@@ -511,6 +669,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -518,7 +677,7 @@
     "## 4.1 Abstract\n",
     "Matrices, are two dimensional arrays. The elements of a matrix are all of the same type. In notation, matrices are denoted with capitol, bold letter such as $\\mathbf{X}$. In this and other labs, `m` is often the number of rows and `n` the number of columns. The elements of a matrix can be referenced with a two dimensional index. In math settings, numbers in the index typically run from 1 to n. In computer science and these labs, indexing will run from 0 to n-1.  \n",
     "<figure>\n",
-    "    <center> <img src=\"./images/C1_W2_Lab04_Matrices.PNG\"  alt='missing'  width=900><center/>\n",
+    "    <center> <img src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 2/images/C1_W2_Lab04_Matrices.PNG\"  alt='missing'  width=900><center/>\n",
     "    <figcaption> Generic Matrix Notation, 1st index is row, 2nd is column </figcaption>\n",
     "<figure/>"
    ]
@@ -555,9 +714,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a shape = (1, 5), a = [[0. 0. 0. 0. 0.]]\n",
+      "a shape = (2, 1), a = [[0.]\n",
+      " [0.]]\n",
+      "a shape = (1, 1), a = [[0.44236513]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.zeros((1, 5))                                       \n",
     "print(f\"a shape = {a.shape}, a = {a}\")                     \n",
@@ -578,9 +748,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " a shape = (3, 1), np.array: a = [[5]\n",
+      " [4]\n",
+      " [3]]\n",
+      " a shape = (3, 1), np.array: a = [[5]\n",
+      " [4]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy routines which allocate memory and fill with user specified values\n",
     "a = np.array([[5], [4], [3]]);   print(f\" a shape = {a.shape}, np.array: a = {a}\")\n",
@@ -616,9 +799,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a.shape: (3, 2), \n",
+      "a= [[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "\n",
+      "a[2,0].shape:   (), a[2,0] = 4,     type(a[2,0]) = <class 'numpy.int64'> Accessing an element returns a scalar\n",
+      "\n",
+      "a[2].shape:   (2,), a[2]   = [4 5], type(a[2])   = <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "#vector indexing operations on matrices\n",
     "a = np.arange(6).reshape(-1, 2)   #reshape is a convenient way to create matrices\n",
@@ -662,9 +860,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = \n",
+      "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]]\n",
+      "a[0, 2:7:1] =  [2 3 4 5 6] ,  a[0, 2:7:1].shape = (5,) a 1-D array\n",
+      "a[:, 2:7:1] = \n",
+      " [[ 2  3  4  5  6]\n",
+      " [12 13 14 15 16]] ,  a[:, 2:7:1].shape = (2, 5) a 2-D array\n",
+      "a[:,:] = \n",
+      " [[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]] ,  a[:,:].shape = (2, 10)\n",
+      "a[1,:] =  [10 11 12 13 14 15 16 17 18 19] ,  a[1,:].shape = (10,) a 1-D array\n",
+      "a[1]   =  [10 11 12 13 14 15 16 17 18 19] ,  a[1].shape   = (10,) a 1-D array\n"
+     ]
+    }
+   ],
    "source": [
     "#vector 2-D slicing operations\n",
     "a = np.arange(20).reshape(-1, 10)\n",
@@ -721,9 +938,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
