--- a/1 Supervised Machine Learning Regression and Classification/Week 2/Lab/C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb
+++ b/1 Supervised Machine Learning Regression and Classification/Week 2/Lab/C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb
@@ -409,6 +409,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -420,7 +421,7 @@
     "Let's look again at the situation with $\\alpha$ = 9e-7. This is pretty close to the maximum value we can set $\\alpha$  to without diverging. This is a short run showing the first few iterations:\n",
     "\n",
     "<figure>\n",
-    "    <img src=\"./images/C1_W2_Lab06_ShortRun.PNG\" style=\"width:1200px;\" >\n",
+    "    <img src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 2/images/C1_W2_Lab06_ShortRun.PNG\" style=\"width:1200px;\" >\n",
     "</figure>\n",
     "\n",
     "Above, while cost is being decreased, its clear that $w_0$ is making more rapid progress than the other parameters due to its much larger gradient.\n",
@@ -428,14 +429,14 @@
     "The graphic below shows the result of a very long run with $\\alpha$ = 9e-7. This takes several hours.\n",
     "\n",
     "<figure>\n",
-    "    <img src=\"./images/C1_W2_Lab06_LongRun.PNG\" style=\"width:1200px;\" >\n",
+    "    <img src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 2/images/C1_W2_Lab06_LongRun.PNG\" style=\"width:1200px;\" >\n",
     "</figure>\n",
     "    \n",
     "Above, you can see cost decreased slowly after its initial reduction. Notice the difference between `w0` and `w1`,`w2`,`w3` as well as  `dj_dw0` and `dj_dw1-3`. `w0` reaches its near final value very quickly and `dj_dw0` has quickly decreased to a small value showing that `w0` is near the final value. The other parameters were reduced much more slowly.\n",
     "\n",
     "Why is this?  Is there something we can improve? See below:\n",
     "<figure>\n",
-    "    <center> <img src=\"./images/C1_W2_Lab06_scale.PNG\"   ></center>\n",
+    "    <center> <img src=\"/workspaces/Machine-Learning/1 Supervised Machine Learning Regression and Classification/Week 2/images/C1_W2_Lab06_scale.PNG\"   ></center>\n",
     "</figure>   \n",
     "\n",
     "The figure above shows why $w$'s are updated unevenly. \n",
